--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -2,8 +2,8 @@
 
 <h2>Commercial Expiry Status Stream</h2>
 
-<div><a href="@routes.Application.start()">Start</a></div>
 <div><a href="@routes.Application.stop()">Stop</a></div>
+<div><a href="@routes.Application.restart()">Restart</a></div>
 
 <hr />
 
