Add Ad-Hoc Streaming Endpoint
To enable manual updates when they need to be done quickly
before the cause of the failure of the automatic process is discovered.

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -8,5 +8,5 @@
 <hr />
 
 <h3>Debugging</h3>
-<div><a href="@routes.Application.produce()">One-off streaming run</a></div>
+<div><a href="@routes.Application.adHocStream("", expired = false)">One-off streaming run</a></div>
 <div><a href="@routes.Application.consume()">Check logging consumer</a></div>
